fix double scroll bar

--- a/style-override.scss
+++ b/style-override.scss
@@ -14,7 +14,7 @@ Override Style
 
 /* prevent overflow of main */
 #content {
-  position: static;
+  //position: static;
 }
 
 /* material design style chip */
